# BRIDGE

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .replit  CITATION.cff  Dockerfile  LICENSE.md  README.md  RELEASE.md  app.py  arc.py  arch.py  generate_form.py  generate_form_classes.py  generate_form_styles.py  generate_header_footer.py  generate_opener.py  paperCRF.py  pylock.toml  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: build.yaml  deploy.yml  lint.yml  pre-commit.yml  test.yml  tests.yml
assets/config_files/: ISARIC Clinical Characterisation Setup.xml  ISARIC Clinical Characterisation Setup_English.xml  ISARIC Clinical Characterisation Setup_French.xml
assets/css/: style.css
bridge/: cli.py
bridge/arc/: arc.py  arc_api.py  arc_core.py  arc_lists.py  arc_translations.py  arc_tree.py
bridge/assets/config_files/: ISARIC Clinical Characterisation Setup_Portuguese.xml  ISARIC Clinical Characterisation Setup_Spanish.xml
bridge/buttons/: arc_data.py  generate.py  save.py  upload.py
bridge/callbacks/: __init__.py  generate.py  grid.py  language.py  modals.py  save.py  settings.py  sidebar.py  tree.py  upload.py  url.py
bridge/create_outputs/: arc_data.py  generate.py  save.py  upload.py  utils.py
bridge/generate_pdf/: form.py  form_classes.py  form_construct.py  guide.py  header_footer.py  opener.py  paper_crf.py  paper_word.py  styles.py
bridge/layout/: about.py  app_layout.py  bridge_modals.py  dropdowns.py  generate.py  grid.py  index.py  modals.py  navbar.py  radios.py  save.py  settings.py  sidebar.py  tree.py  upload.py
bridge/logging/: logger.py
bridge/utils/: crf.py  crf_name.py  trigger_id.py  utils.py
docs/: conf.py  index.rst  requirements.txt
docs/sources/: api-reference.rst  app.rst  cli.rst  contributors.rst  getting-started.rst
docs/sources/bridge/: cli.rst
docs/sources/module-sources/: bridge.cli.rst
generate_pdf/: form.py  form_classes.py  form_construct.py  guide.py  header_footer.py  opener.py  styles.py
ops/watchdog/: README.md  bridge-watchdog.service  bridge-watchdog.sh  bridge-watchdog.timer
src/: arc.py  arc_api.py  bridge_crf.py  bridge_main.py  bridge_modals.py  generate_form.py  index.py  logger.py  paper_crf.py
src/create_outputs/: generate.py  language.py  save.py  upload.py  utils.py
src/generate_pdf/: form.py  form_classes.py  form_construct.py  guide.py  header_footer.py  opener.py  styles.py
src/layout/: app_layout.py
tests/: conftest.py  test_arc.py  test_arc_tree.py  test_crf_name.py  test_generate.py  test_grid.py  test_language.py  test_modals.py  test_save.py  test_settings.py  test_sidebar.py  test_tree.py  test_upload.py  test_url.py
tests/arc/: test_arc_api.py  test_arc_core.py  test_arc_lists.py  test_arc_translations.py  test_arc_tree.py
tests/callbacks/: test_generate.py  test_grid.py  test_language.py  test_modals.py  test_save.py  test_settings.py  test_sidebar.py  test_tree.py  test_upload.py  test_url.py
tests/data/: arc-1.2.2-en-paperlike-details.csv  arc-1.2.2-en-supplemental-phrases.csv  arc-1.3.0-crf-metadata.csv  arc-1.4.0-crf-metadata.csv  ccpuk-hantavirus-data-dictionary-2026-05-15.csv
tests/generate_pdf/: test_form.py  test_header_footer.py  test_paper_crf.py  test_paper_word.py
tests/utils/: test_crf.py  test_crf_name.py  test_utils.py
