[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaric-bridge"
version = "0.1.0"
description = "ISARIC BRIDGE web application"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
dependencies = [
  "dash==2.17.0",
  "dash-bootstrap-components==1.7.1",
  "dash_ag_grid==32.3.2",
  "dash_treeview_antd==0.0.1",
  "numpy==2.2.6",
  "packaging==25.0",
  "pandas==2.3.3",
  "python-docx==1.2.0",
  "reportlab==4.4.3",
  "requests==2.32.5",
  "Unidecode==1.4.0",
  "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]
namespaces = true
