[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaric-bridge"
dynamic = ["version"]
description = "ISARIC BRIDGE web application"

# All current contributors
authors = [
    { name = "Laura Thomson", email = "laura.thomson@dtc.ox.ac.uk" },
    { name = "Sara Duque-Vallejo", email = "sara.duquevallejo@ndm.ox.ac.uk" },
    { name = "Alasdair Wilson", email = "alasdair.wilson@ndm.ox.ac.uk" },
    { name = "Sandeep Murthy", email = "sandeep.murthy@ndm.ox.ac.uk" },
    { name = "Esteban Garcia-Gallo", email = "esteban.garcia@ndm.ox.ac.uk" },
    { name = "Tom Edinburgh", email = "tom.edinburgh@ndm.ox.ac.uk" }
]

# All current project admins
maintainers = [
    { name = "Alasdair Wilson", email = "alasdair.wilson@ndm.ox.ac.uk" },
    { name = "Sandeep Murthy", email = "sandeep.murthy@ndm.ox.ac.uk" }
]

readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
dependencies = [
  "dash==2.17.0",
  "dash-bootstrap-components==1.7.1",
  "dash_ag_grid==32.3.2",
  "dash_treeview_antd==0.0.1",
  "numpy==2.2.6",
  "packaging==25.0",
  "pandas==2.3.3",
  "python-docx==1.2.0",
  "reportlab==4.4.3",
  "requests==2.33.0",
  "Unidecode==1.4.0",
  "gunicorn==23.0.0",
]

[project.optional-dependencies]
pre-commit = [
  "pre-commit",
]

test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.setuptools.dynamic]
version = {attr = "bridge.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]
namespaces = true
