[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaric-bridge"
dynamic = ["version"]
description = "ISARIC BRIDGE Web Application"

# All current contributors
authors = [
    { name = "Laura Thomson", email = "laura.thomson@dtc.ox.ac.uk" },
    { name = "Sara Duque-Vallejo", email = "sara.duquevallejo@ndm.ox.ac.uk" },
    { name = "Alasdair Wilson", email = "alasdair.wilson@dtc.ox.ac.uk" },
    { name = "Sandeep Murthy", email = "sandeep.murthy@ndm.ox.ac.uk" },
    { name = "Esteban Garcia-Gallo", email = "esteban.garcia@ndm.ox.ac.uk" },
    { name = "Tom Edinburgh", email = "tom.edinburgh@ndm.ox.ac.uk" }
]

# All current project admins
maintainers = [
    { name = "Alasdair Wilson", email = "alasdair.wilson@dtc.ox.ac.uk" },
    { name = "Sandeep Murthy", email = "sandeep.murthy@ndm.ox.ac.uk" }
]

readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }

# These keywords have been taken from the available ISARIC documentation,
# and arent't comprehensive or standardised.
keywords = [
    "isaric",
    "bridge",
    "infectious disease",
    "pandemic",
    "disease outbreak",
    "clinical epidemiology",
    "disease outbreak response",
    "analysis and research compendium",
    "arc",
    "case report form",
    "crf",
    "data capture",
]

# Not strictly required as this isn't a public Python package, but still good
# to have.
classifiers = [
        "Environment :: Web Environment",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Development Status :: 5 - Production/Stable",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
]

dependencies = [
  "dash==2.17.0",
  "dash-bootstrap-components==1.7.1",
  "dash_ag_grid==32.3.2",
  "dash_treeview_antd==0.0.1",
  "numpy==2.2.6",
  "packaging==25.0",
  "pandas==2.3.3",
  "python-docx==1.2.0",
  "reportlab==4.4.3",
  "requests==2.33.0",
  "Unidecode==1.4.0",
  "gunicorn==23.0.0",
]

[project.optional-dependencies]
pre-commit = [
  "pre-commit",
]

test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

docs = [
  "Sphinx",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-gallery",
  "sphinx-design",
  "myst-parser",
  "pylint",
  "furo",
  "numpydoc",
  "nb2plots",
  "jupyter-sphinx",
]


[tool.setuptools.dynamic]
version = {attr = "bridge.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]
namespaces = true
